Fix integration test and env var retrieving
